# animation_tp3

./: CMakeLists.txt  Doxyfile  FindGLUT.cmake
data/: OneArmV.bvh  Robot1.bvh  Robot2.bvh  Robot2Legs.bvh  Robot2Legs2.bvh
data/divers/: G25Ballet2.bvh  G25Piroette.bvh  G25RAWDanceGoosStepKick.bvh  G25RAWDanceTwistInPlace.bvh  G25RAWGettingShot.bvh  G25RAWTwirlFireLong.bvh  G25RAWWalkingAroundSlowShort.bvh  LaughingBigShort.bvh  LayingOnGroundStroking.bvh  MarchingOneSpot.bvh  RAWDanceBoyzBandSectional2.bvh  RAWDanceBoyzBandSectional3.bvh  RAWDanceShrtKickngShrt.bvh  RAWFootballBouncingShort.bvh  RAWFootballKickFall.bvh  RAWMobilePhoneWalkCircles.bvh  RAWjumpShortArmsUp.bvh  RAWstandingWaiting.bvh  RAWwalkingMobilePhoeLong1.bvh  RDstepsUpDownNoZAxs.bvh  SayingGoodBye01.bvh  SayingGoodBye02.bvh  SayingGoodBye03.bvh  StandingGreeting.bvh  StandingLookingPasserBy.bvh  StandingMafiaSwearingIn.bvh  StandingSayingNoShort.bvh  WalkingNormalLong.bvh  walk.bvh
doc/: Array2D_8hpp.html  Array2D_8hpp_source.html  BVHAxis_8h.html  BVHAxis_8h_source.html  BVHChannel_8cpp.html  BVHChannel_8cpp_source.html  BVHChannel_8h.html  BVHChannel_8h_source.html  BVHJoint_8cpp.html  BVHJoint_8cpp_source.html  BVHJoint_8h.html  BVHJoint_8h_source.html  BVH_8cpp.html  BVH_8cpp_source.html  BVH_8h.html  BVH_8h_source.html  CARagdoll_8h.html  CARagdoll_8h_source.html  CASkeleton_8cpp.html  CASkeleton_8cpp_source.html  CASkeleton_8h.html  CASkeleton_8h_source.html  CAViewer_8cpp.html  CAViewer_8cpp_source.html  CAViewer_8h.html  CAViewer_8h_source.html  Camera_8h.html  Camera_8h_source.html  Mat4_8h.html  Mat4_8h_source.html  Quaternion_8h.html  Quaternion_8h_source.html  README.txt  ShallowWater_8hpp.html  ShallowWater_8hpp_source.html  Vec2_8h.html  Vec2_8h_source.html  Vec3_8h.html  Vec3_8h_source.html  Vec4_8h.html  (+196 more)
src/CACore/: CARagdoll.h  CASkeleton.cpp  CASkeleton.h
src/CALoader/: BVH.cpp  BVH.h  BVHAxis.h  BVHChannel.cpp  BVHChannel.h  BVHJoint.cpp  BVHJoint.h
src/CAMath/: Mat4.h  Quaternion.h
src/CAViewer/: Array2D.h  Array2D.hpp~  Array2D.h~  CAViewer.cpp  CAViewer.h  Camera.h  ShallowWater.cpp  ShallowWater.cpp~  ShallowWater.h  ShallowWater.hpp~  ShallowWater.h~  Viewer.cpp  Viewer.h  main.cpp
